# waifuVault-python-api

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: deploy.yml
src/waifuVault-python-api/: waifumodels.py
src/waifuVault_python_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/waifuvault/: __init__.py  waifumodels.py  waifuvault.py
src/waifuvault.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_waifuvault.py
