[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waifuvault"
version = "1.1.2"
authors = [
    { name="Walker Aldridge", email="walker@waifuvault.moe" },
]
description = "waifuVault Python API module"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "requests_toolbelt"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/waifuvault/waifuVault-python-api"
Issues = "https://github.com/waifuvault/waifuVault-python-api/issues"